--- a/estilos/estilo2.css
+++ b/estilos/estilo2.css
@@ -57,10 +57,14 @@ a:hover{
     display: flexbox;
     flex-direction: row;
 }
-.img{
-    width: 100%;
-    height: 500px;
-    margin: 10%;
+.imgg{
+ margin: auto;
+    padding: 5%;
+}
+.img-1{
+    width: 500px;
+    height: 450px;
+    padding: 15%;
     @media only screen and (max-width: 576px) {
        width: 110px;
        height: 110px;
@@ -81,31 +85,86 @@ a:hover{
 
 .grid{
     display: grid;
-    grid-template-columns:  30% auto;
-    grid-template-rows: 55px 6% auto 10%;
+    grid-template-columns:  50% 50%;
+    grid-template-rows: 10% 40% 15% 50% 50px;
 
     grid-template-areas: 
-    "titulo titulo "
-    "navbar navbar"
-    "imgg content"
+    "titulo titulo"
+    "imagen i2"
+    "p1 p1"
+    "vta vta"
     "pie pie";
 }
 header{
     grid-area: titulo;
  }
-#content{
-    grid-area: content;
+.par1{
+    grid-area: p1;
 }
-.navbar{
+/*.navbar{
     grid-area: navbar;
-}
+}*/
 #pie{
     grid-area: pie;
 }
 .imgg{
-    grid-area: imgg;
+    grid-area: imagen;
+}
+.imgsec-secundaria{
+    grid-area: i2;
+}
+.venta-libro{
+    grid-area: vta;
 }
 
+.img2{
+    width: 200px;
+    height: 280px;
+    margin: auto;
+}
+.img-secundaria{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: auto;
+    
+}
+.par1{
+    background-color: black;
+    color: rgb(250, 250, 250);
+    font-family: cursive;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    display: inline;
+   
+}
+.venta-libro{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content:space-around;
+    width: 1100px;
+    height: 500px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    margin: auto;
+
+}
+.venta{
+    width: 100px;
+    height: 100px;
+    border-radius: 30%;
+}
+.planeta{
+    font-family: 'Courier New', Courier, monospace;
+    text-align: center;
+    color: black;
+    width: 200px;
+    height: 100px;
+
+}
 .firm{
     display: flex;
     align-items: center;
@@ -184,5 +243,4 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 }
