--- a/estilos/estilo2.css
+++ b/estilos/estilo2.css
@@ -1,25 +1,30 @@
+@import url('https://fonts.googleapis.com/css2?family=Caveat:wght@500&family=WindSong:wght@500&display=swap');
 *{
     margin: 0%;
 }
-body{
-     background: rgb(231, 221, 231);
-}
 h1{
     text-align: center;
-    color:black;
     background-color: rgba(215, 186, 243, 0.781);
-    font-family: serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 80px;
+    font-family: 'WindSong', cursive;
 }
+.nombre{
+    font-family:'WindSong', cursive;
+}
+body{
+    background: rgb(231, 221, 231);
+}
+
 #container{
-    font-family: cursive;
+    font-family: 'Caveat', cursive;
     text-align: center;
 }
 .content{
     background-color: beige;
-    font-family: cursive;
+    font-family: 'Caveat', cursive;
     text-align: center;
     margin: 10%;
+    font-size: 25px;
 }
 a:link{
     text-decoration-line: none;
@@ -27,10 +32,11 @@ a:link{
 }
 .na{
     color: blueviolet;
+    font-family: 'Caveat', cursive;
 }
 .in{
     color: rgb(58, 11, 80);
-    font-family: cursive;
+    font-family: 'Caveat', cursive;
 }
 a:link {
     color: rgb(46, 5, 48);
@@ -58,7 +64,7 @@ a:hover{
     flex-direction: row;
 }
 .imgg{
- margin: auto;
+    margin: auto;
     padding: 5%;
 }
 .img-1{
@@ -86,12 +92,13 @@ a:hover{
 .grid{
     display: grid;
     grid-template-columns:  50% 50%;
-    grid-template-rows: 10% 40% 15% 50% 50px;
+    grid-template-rows: 10% 40% 15% 10% 50% 50px;
 
     grid-template-areas: 
     "titulo titulo"
     "imagen i2"
     "p1 p1"
+    "tit-vta tit-vta"
     "vta vta"
     "pie pie";
 }
@@ -101,9 +108,6 @@ header{
 .par1{
     grid-area: p1;
 }
-/*.navbar{
-    grid-area: navbar;
-}*/
 #pie{
     grid-area: pie;
 }
@@ -115,6 +119,9 @@ header{
 }
 .venta-libro{
     grid-area: vta;
+}
+.nombre{
+    grid-area: tit-vta;
 }
 
 .img2{
@@ -132,12 +139,20 @@ header{
 .par1{
     background-color: black;
     color: rgb(250, 250, 250);
-    font-family: cursive;
+    font-family: 'Caveat', cursive;
+    font-size: 25px;
     text-align: center;
     margin: auto;
     width: 100%;
     display: inline;
    
+}
+.pedi{
+    font-size: 25px;
+    text-align: center;
+    margin: auto;
+    width: 100%;
+    margin-top: 10%;
 }
 .venta-libro{
     display: flex;
@@ -152,13 +167,14 @@ header{
     margin: auto;
 
 }
-.venta{
-    width: 100px;
-    height: 100px;
+.rounded-circle{
+    width: 320px;
+    height: 320px;
     border-radius: 30%;
 }
 .planeta{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: 'WindSong', cursive;
+    font-size: 30px;
     text-align: center;
     color: black;
     width: 200px;
@@ -189,7 +205,7 @@ header{
     width: 300px;
     height: 370px;
     background-color: rgb(155, 102, 204);
-    font-family: serif, 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Caveat', cursive;
     font-size: 20px;  
     display: flex;
     flex-direction: column;
@@ -215,9 +231,10 @@ header{
     width: 500px;
     height: 500px;
     margin: auto;
-    margin-top: 20px;
+    margin-top: 25px;
     background-color: rgb(248, 210, 210);
-    font-family: cursive;
+    font-family: 'Caveat', cursive;
+    font-size: 23px;
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -243,4 +260,8 @@ ul{
     display: flex;
     flex-direction: column;
     justify-content: center;
+}
+.fa{
+    width: 10px;
+    height: 10px;
 }
