--- a/estilos/estilo2.css
+++ b/estilos/estilo2.css
@@ -4,26 +4,28 @@
 }
 h1{
     text-align: center;
+    background-color: rgba(215, 186, 243, 0.781);
     font-size: 80px;
+    font-family: 'WindSong', cursive;
     font-family: 'WindSong', cursive; 
     display: inline;
     width: 100%;
     height: 200px;
 }
-
 header{
     background-color: rgb(216, 201, 226);
 } 
 .titulo{
     text-align: center;
 }
-   
 .nombre{
     font-family:'WindSong', cursive;
 }
 #container{
     font-family: 'Caveat', cursive;
     text-align: center;
+    text-decoration-line: none;
+    text-decoration-color: none;
 }
 .content{
     background-color: beige;
@@ -37,15 +39,19 @@ a:link{
     text-decoration-color: none;
 }
 .navbar{
+
     font-family: 'Caveat', cursive;
     font-size: 20px;
-    /*overflow: hidden;*/
+    overflow: hidden;
     background-color: rgb(216, 201, 226);
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
   }
+  
   .collapse{
     background-color: rgb(216, 201, 226);
-    
+
   }
 .in{
     color: rgb(58, 11, 80);
@@ -96,7 +102,11 @@ a:hover{
         display: none;
     }
 }
-
+.mapa{
+    width: 250px;
+    height: 250px;
+    margin: auto;
+}
 
 .grid{
     display: grid;
@@ -193,9 +203,10 @@ header{
 }
 .firm{
     display: flex;
+    align-items: center;
     flex-direction: row;
     justify-content: space-between;
-    
+    margin: 10%
 }
 .h4{
     border-width: 1px;
@@ -210,11 +221,7 @@ header{
 .p-mapa{
     margin: auto;
 }
-.mapa{
-    width: 200px;
-    height: 200px;
-    margin: auto;
-}
+
 .carousel{
     width: 500px;
     height: 500px;
@@ -265,7 +272,7 @@ header{
        display: none;
     }
 }
-.obras{
+  #obras{
     margin-top: 50px;
 }
 ul{
@@ -273,7 +280,6 @@ ul{
 }
 li{
     list-style: none;
-    
 }
 .bio{
     margin-top: 50px;
