--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -44,9 +44,8 @@ header{
 }
 @media (max-width: 576px) {
     .venta-libro{
-        display: flex;
+        @include flex-column;
         flex-wrap: nowrap;
-        flex-direction: column;
         width: auto;
         height: auto;
         border-width: $borde2;
@@ -62,8 +61,7 @@ header{
     background-color: $color-5to;
     font-family: $font-2;
     font-size: 20px;  
-    display: flex;
-    flex-direction: column;
+   @include flex-column;
     justify-content: center;
     margin: auto;
     margin-top: 20px;
