--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,40 @@ h1 {
   margin-top: 50px;
 }
 
+.club h2, .club h3 {
+  color: beige;
+  font-family: "Caveat", cursive;
+  font-size: 40px;
+  background-color: black;
+  text-align: center;
+  margin: auto;
+  width: 100%;
+}
+.club p {
+  font-family: "Caveat", cursive;
+  font-size: 30px;
+  text-align: center;
+  color: black;
+  margin-top: 30px;
+}
+.club p .in {
+  text-decoration-line: none;
+  text-decoration-color: none;
+  color: rgb(46, 5, 48);
+  color: rgb(46, 5, 48);
+  font-family: "Caveat", cursive;
+}
+.club p .in:hover {
+  color: rgb(216, 201, 226);
+}
+.club .img-club p {
+  font-family: "Caveat", cursive;
+  font-size: 30px;
+  text-align: center;
+  color: black;
+  padding: 30px;
+}
+
 .grid {
   display: grid;
   grid-template-columns: 50% 50%;
@@ -237,13 +271,11 @@ header {
 }
 
 .imagen-bio {
-  width: 100%;
-  height: 100%;
-}
-@media screen and (max-width: 600px) {
-  .imagen-bio {
-    display: none;
-  }
+  width: auto;
+  height: auto;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
 }
 
 .carousel {
@@ -290,6 +322,32 @@ header {
   width: 320px;
   height: 320px;
   border-radius: 30%;
+}
+
+.instagram {
+  width: 50px;
+  height: 50px;
+  border-radius: 30%;
+}
+
+.i-club {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: space-around;
+  width: auto;
+  height: auto;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
+  margin: auto;
+  padding: 15px;
+  margin-block-end: 20px;
+}
+.i-club .imag-club {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
 }
 
 * {
@@ -371,18 +429,25 @@ header {
 }
 
 #pie {
-  background-color: rgb(182, 119, 241);
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: rgb(216, 201, 226);
   text-align: center;
   font-size: 30px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: black;
 }
-#pie a:link {
+#pie .in {
   text-decoration-line: none;
   text-decoration-color: none;
   color: rgb(46, 5, 48);
-}
-#pie .in {
   color: rgb(46, 5, 48);
   font-family: "Caveat", cursive;
+}
+#pie .in:hover {
+  color: rgb(155, 102, 204);
 }
 
 /*# sourceMappingURL=styles.css.map */
