--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -28,11 +28,11 @@
     margin: auto;  
 }
 .imagen-bio{
-    width: 100%;
-    height: 100%;
-    @media screen and (max-width: 600px) {
-        display: none;
-    }
+    width: auto;
+    height: auto;
+    border-width: $borde2;
+    border-style: $borde;
+    border-color: $color-2do;
 }
 .carousel{
     width: 500px;
@@ -75,4 +75,29 @@
     height: 320px;
     border-radius: 30%;
 }
+.instagram{
+    width: 50px;
+    height: 50px;
+    border-radius: 30%;
+}
+.i-club{
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+    width: auto;
+    height: auto;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    margin: auto;
+    padding: 15px;
+    margin-block-end: 20px;
 
+    .imag-club{
+        width: 220px;
+        height: 220px;
+        border-radius: 50%;
+        
+    }
+}
