--- a/scss/_textos.scss
+++ b/scss/_textos.scss
@@ -100,4 +100,45 @@ h1{
 .bio{
     margin-top: 50px;
 }
+.club{
+        h2, h3{
+        color: $color-3ro;
+        font-family: $font-2;
+        font-size: 40px;
+        background-color: $color-2do;
+        text-align: center;
+        margin: auto;
+        width: 100%;
+        }
+        p{
+            font-family: $font-2;
+            font-size: 30px;
+            text-align: center;
+            color: $color-2do;
+            margin-top: 30px;
+            
+            .in{
+                text-decoration-line: none;
+                text-decoration-color: none;
+                color: rgb(46, 5, 48);
+                color: $color-4to;
+                font-family: $font-2;
+                &:hover{
+                color: $color-1ro; 
+            }
+            } 
+            
+        }
+    
+    .img-club{
+        p{
+            font-family: $font-2;
+            font-size: 30px;
+            text-align: center;
+            color: $color-2do;
+            padding: 30px;
+            
+        }
+    }
+}
 
