--- a/scss/_mixin.scss
+++ b/scss/_mixin.scss
@@ -6,3 +6,11 @@
     display: flex;
     flex-direction: row;  
 }
+@mixin size ($width, $heigth) {
+    width: $width;
+    height: $heigth;
+}
+@mixin m-p ($margin, $padding) {
+    margin: $margin;
+    padding: $padding;
+}
