arreglo botones carrousel

--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -56,7 +56,7 @@
     }
 }
 
-#carouselExampleControls{
+#carouselExample{
     margin: auto;
     margin-block-end: 50px;
     @include flex-column;
