--- a/css/styles.css
+++ b/css/styles.css
@@ -309,7 +309,7 @@ header {
     margin-block-end: 20px;
   }
 }
-#carouselExampleControls {
+#carouselExample {
   margin: auto;
   margin-block-end: 50px;
   display: flex;
@@ -371,10 +371,14 @@ header {
   overflow: hidden;
   display: flex;
   flex-direction: column;
-  justify-content: flex-end;
+  justify-items: end;
 }
 .navbar .collapse {
   background-color: rgb(186, 122, 230);
+  display: block;
+  display: flex;
+  flex-direction: column;
+  justify-items: auto;
 }
 
 .venta-libro {
