--- a/scss/_estructura.scss
+++ b/scss/_estructura.scss
@@ -21,8 +21,6 @@ header{
     overflow: hidden;
     @include flex-column;
     justify-items: end;
-    top: 0;
-    left: 30%;
         .collapse{
             background-color: $color-1ro;
             display: block;
@@ -31,6 +29,13 @@ header{
             
         }
 }
+@media(max-width: 586px) {
+    .collapse{
+        top: 0;
+        left: 50%;
+    }
+}
+
 .navbar-toggler{
 display: flex;
 flex-direction: row;
