--- a/scss/_grid.scss
+++ b/scss/_grid.scss
@@ -1,6 +1,6 @@
 .grid{
     display: grid;
-    grid-template-columns:  50% 50%;
+    grid-template-columns:  auto auto;
     grid-template-rows: 10% 30% 25% 10% 50% 50px;
 
     grid-template-areas: 
@@ -14,7 +14,6 @@
 header{
     grid-area: titulo;
 }
-
 .par1{
     grid-area: p1;
 }
